# algorithms_training

./: CMakeLists.txt
algorithms_illuminated_part_1/: CMakeLists.txt
algorithms_illuminated_part_1/3_2_inversion_count/: main.cpp
algorithms_illuminated_part_1/3_4_closest_points/: main.cpp
algorithms_illuminated_part_1/5_qsort/: main.cpp
algorithms_illuminated_part_1/6_1_rselect/: main.cpp
algorithms_illuminated_part_1/8_5_topological_sorting/: main.cpp
algorithms_illuminated_part_1/8_6_strongly_connected_components/: main.cpp
algorithms_illuminated_part_1/task_3_3_ai_eq_i/: main.cpp
algorithms_illuminated_part_1/task_3_4_local_minimum/: main.cpp
algorithms_illuminated_part_2/10_3_3_median_maintenance/: main.cpp
algorithms_illuminated_part_2/10_4_dijkstra_heap_based/: main.cpp
algorithms_illuminated_part_2/10_5_heap_implementation/: main.cpp
algorithms_illuminated_part_2/11_search_tree/: main.cpp
algorithms_illuminated_part_2/12_2_2_two_sum/: main.cpp
algorithms_illuminated_part_2/12_hash_table/: main.cpp
algorithms_illuminated_part_2/8_2_breadth_first_search/: main.cpp
algorithms_illuminated_part_2/8_3_connected_components/: main.cpp
algorithms_illuminated_part_2/8_4_depth_first_search/: main.cpp
algorithms_illuminated_part_2/8_6_strongly_connected_components/: main.cpp
algorithms_illuminated_part_2/9_2_dijkstra/: main.cpp
algorithms_illuminated_part_2/9_2_dijkstra_s_shortest_way_algorythm/: main.cpp
mentoring/parse_bit_mask/: main.cpp
mentoring/split_iterator/: main.cpp
other/: CMakeLists.txt
testcase/: CMakeLists.txt
(+11 files in other folders)
